force-app/main/default/objects/Credit_Memo__c/Credit_Memo__c.object-meta.xml
<CustomObject>
    <label>Credit​ ​Memo</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Credit​ ​Memo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit​ ​Memo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>