force-app/main/default/objects/Credit_Memo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit​ ​Memo</relationshipLabel>
    <relationshipName>Credit_Memo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>