force-app/main/default/objects/Credit_Memo__c/fields/Credit_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiry_Date__c</fullName>
    <label>Credit Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>