force-app/main/default/objects/Credit_Memo__c/fields/Currency_ISO__c.field-meta.xml
<CustomField>
    <fullName>Currency_ISO__c</fullName>
    <label>Currency ISO</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
                <default>true</default>
                <label>$</label>
            </value>
            <value>
                <fullName>€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>