force-app/main/default/objects/Credit_Memo__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>1.1</fullName>
            </value>
            <value>
                <fullName>0.91</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>