force-app/main/default/objects/Credit_Memo__c/fields/IsExpired__c.field-meta.xml
<CustomField>
    <fullName>IsExpired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expired ?</label>
    <type>Checkbox</type>
</CustomField>