force-app/main/default/objects/Credit_Memo__c/fields/Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Text_Color__c</fullName>
    <label>Text Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>white</fullName>
                <default>true</default>
                <label>white</label>
            </value>
            <value>
                <fullName>black</fullName>
            </value>
            <value>
                <fullName>red</fullName>
            </value>
            <value>
                <fullName>blue</fullName>
            </value>
            <value>
                <fullName>purple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>